<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFs</string>
    <string name="menu_settings">Settings</string>
    <string name="send">envoi</string>
    <string name="title_section3">Traced Friend</string>
    <string name="title_section2">Friends</string>
    <string name="title_section1">Profil</string>
    <string name="title_activity_connected">ConnectedActivity</string>
    <string name="hello">HELLOWORLD</string>
    <string name="profil_image">Image Of Profil</string>
    <string name="test">Test</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="publictoken">Public Token</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search Friends</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="searchFriend">Search Friend</string>
    <string name="refresh_friends">Refresh Friends From Web</string>
    <string name="delete_menu">Delete Friend</string>
    <string name="info_menu">Info Friend</string>
    <string name="call_menu">Call Friend</string>
    <string name="sms_menu">Send SMS</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mapKey">05jjNhAydp4lBrD_i4IWqj6nGVkYMVSpHOjdATg</string>
    <string name="local_service_started">Geo Sender Service</string>
    <string name="unknown_phone_number">Unknown Phone number</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>

</resources>